<!--
  ~ Copyright 2018 Lithium Technologies Pvt Ltd
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="title_sdk_initialization">SDK Initialization</string>

    <string name="action_initialize">Initialize</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_reset">Reset</string>

    <string name="hint_client_name">Client Name</string>
    <string name="hint_community_url">Community Url</string>
    <string name="hin_tenant_id">Tenant Id</string>
    <string name="hint_client_secret">Client Secret</string>
    <string name="hint_client_id">Client Id</string>
    <string name="tip_restart_app">Restart application to reset credentials!</string>

</resources>
